--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="DigiLex - A comprehensive platform that combines AI and blockchain technology"
     />
-    <meta http-equiv="Content-Security-Policy" content="connect-src 'self' https://generativelanguage.googleapis.com https://api-inference.huggingface.co http://localhost:5000 http://localhost:50001 https://*.googleapis.com;">
+    <meta http-equiv="Content-Security-Policy" content="connect-src 'self' https://generativelanguage.googleapis.com https://api-inference.huggingface.co https://digilexaibackend.onrender.com http://localhost:5000 http://localhost:50001 https://*.googleapis.com;">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
